# ruckig_state_msgs

./: CMakeLists.txt  README.md  package.xml
include/ruckig_state_msgs/: message_utils.h
msg/: DurationDiscretization.msg  Interface.msg  InternalState.msg  Result.msg  Synchronization.msg
scripts/: generate_msgs.py  requirements.txt
